# HaxBallRL

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Generate_Metric_Plots.ipynb  Makefile  README.md  main.cpp
src/: AgentDP.cpp  AgentDP.h  AgentTDSituative.cpp  AgentTDSituative.h  AgentTDmaster.cpp  AgentTDmaster.h  Features.cpp  Features.h  Rewards.cpp  Rewards.h
